istio/networking/tls-demo/backend.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: backend-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.example.com"
      port:
        name: https-simple
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "valid-credential"
    - hosts:
        - "passthrough.example.com"
      port:
        name: https-passthrough
        number: 443
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend-v1
spec:
  hosts:
    - "*.example.com"
  gateways:
    - backend-gw
  http:
    - route:
        - destination:
            host: infra-backend-v1
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend-tls
spec:
  hosts:
    - "passthrough.example.com"
  gateways:
    - backend-gw
  tls:
    - match:
        - port: 443
          sniHosts:
            - "passthrough.example.com"
      route:
        - destination:
            host: tls-backend
            port:
              number: 443
---
