istio/networking/tls-demo/tls-simple.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: backend-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.example.com"
      port:
        name: https-simple
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "valid-credential"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend-v1
spec:
  hosts:
    - "*.example.com"
  gateways:
    - backend-gw
  http:
    - route:
        - destination:
            host: infra-backend-v1
            port:
              number: 8080
---
